# winzy-cut

./: README.md  pyproject.toml
tests/: test_winzy_cut.py
winzy_cut/: __init__.py
