[project]
name = "winzy-cut"
version = "0.1"
description = "Mimics the functionality of the 'cut' command"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-cut"
Changelog = "https://github.com/sukhbinder/winzy-cut/releases"
Issues = "https://github.com/sukhbinder/winzy-cut/issues"
CI = "https://github.com/sukhbinder/winzy-cut/actions"

[project.entry-points."winzy.plugins"]
cut = "winzy_cut:cut_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
